--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(HW2_wet)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(HW2_wet main.cpp mainWet2.cpp recordsCompany.cpp)
+add_executable(HW2_wet main.cpp mainWet2.cpp recordsCompany.cpp hashTable.cpp Customer.cpp reversedTree.cpp)
